maj du docker. Ajout de bash_it pour avoir une coloration et goodiez dans le shell ^^

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 # https://hub.docker.com/r/chipgarner/opencv3-webcam/
 FROM chipgarner/opencv3-webcam:python2
 
-ADD requirements.txt /requirements.txt
+# ADD requirements.txt /requirements.txt
 
 RUN apt-get update
 # https://stackoverflow.com/questions/11114225/installing-scipy-and-numpy-using-pip
@@ -19,3 +19,17 @@ WORKDIR /home
 COPY /docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
+
+RUN apt-get update &&\
+ 	apt-get install -qqy \
+ 		git
+
+# RUN apt-get update && apt-get install -qqy git zsh
+# RUN wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh || true
+# ENV TERM xterm-256color
+# CMD ["/bin/zsh"]
+
+
+RUN git clone --depth=1 https://github.com/Bash-it/bash-it.git ~/.bash_it &&\
+	~/.bash_it/install.sh --silent
+# ENV BASH_IT_THEME "powerline-multiline"
